tests/snapshots/quoting__it_can_parse_double_quotes.snap
---
source: tests/quoting.rs
expression: x
---
{
  "greeting": "We meet again Mr. Anderson",
  "name": "Mr. Anderson"
}
