tests/snapshots/quoting__it_can_parse_mixed_quotations.snap
---
source: tests/quoting.rs
expression: x
---
{
  "greeting": "We \"meet\" again Mr. Anderson",
  "name": "Mr. Anderson"
}
